---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "val",
                                Base(
                                    Numeric(
                                        U256,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
    tuples_used: {},
}

note: 
  ┌─ features/if_statement_2.fe:4:12
  │
4 │         if val > 5:
  │            ^^^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:4:18
  │
4 │         if val > 5:
  │                  ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:4:12
  │
4 │         if val > 5:
  │            ^^^^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:5:20
  │
5 │             return 1
  │                    ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:7:20
  │
7 │             assert true
  │                    ^^^^ attributes hash: 10866140763116710699
  │
  = ExpressionAttributes {
        typ: Base(
            Bool,
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:9:16
  │
9 │         return 0
  │                ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/if_statement_2.fe:3:5
  │  
3 │ ╭     pub def bar(val: u256) -> u256:
4 │ │         if val > 5:
5 │ │             return 1
6 │ │         else:
7 │ │             assert true
8 │ │ 
9 │ │         return 0
  │ ╰────────────────^ attributes hash: 15498251886604183331
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "val",
                Base(
                    Numeric(
                        U256,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U256,
            ),
        ),
    }

note: 
  ┌─ features/if_statement_2.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │ 
3 │ │     pub def bar(val: u256) -> u256:
4 │ │         if val > 5:
  · │
8 │ │ 
9 │ │         return 0
  │ ╰────────────────^ attributes hash: 18155098539914197329
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "val",
                        Base(
                            Numeric(
                                U256,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U256,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        list_expressions: {},
        string_literals: {},
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/if_statement_2.fe:3:22
  │
3 │     pub def bar(val: u256) -> u256:
  │                      ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )

note: 
  ┌─ features/if_statement_2.fe:3:31
  │
3 │     pub def bar(val: u256) -> u256:
  │                               ^^^^ attributes hash: 17942395924573474124
  │
  = Base(
        Numeric(
            U256,
        ),
    )


